--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
   
 }
 
-#canves {
+#canvas {
   
   height: 680px;
   width: 100%;
@@ -69,6 +69,53 @@ ul.attributes > li > span.scaleY:before {
   content:"scale-y: ";
 }
 
+table.info {
+  
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  list-style-type: none;
+  border: 1px solid #aaa;
+  z-index: 1000;
+  background-color: rgba(255,255,255,0.5);
+}
+
+table.info tr {
+  opacity: 0.7;
+}
+
+table.info tr:hover {
+  opacity: 1;
+}
+
+table.info td {
+  
+  padding: 5px 10px 5px 10px;
+  height: 30px;
+}
+
+table.info td a{
+  
+  color: #333;
+}
+
+table.info td a:hover {
+  
+  text-decoration: none;
+}
+
+table.info td.link {
+  
+  cursor: pointer;
+}
+
+table.info img {
+  
+  width: auto;
+  height: auto;
+  max-width: 80px;
+  max-height: 30px;
+}
 
 
 
