--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ body {
   border:1px solid grey;
   background-color: #E8E8E8;
   border: 1px solid #888888;
+  overflow: hidden;
 }
 
 ul.attributes {
